Fix test that depend on WrapperInstance