@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,6 @@ import java.lang.reflect.Proxy;
 /*
  * @test
  * @summary Basic test of proxy module mapping and the access to Proxy class
- * @modules java.base/sun.invoke
  */
 
 public class ProxyModuleMapping {
@@ -36,9 +35,6 @@ public class ProxyModuleMapping {
         ClassLoader ld = ProxyModuleMapping.class.getClassLoader();
         Module unnamed = ld.getUnnamedModule();
         new ProxyModuleMapping(Runnable.class).test();
-
-        // unnamed module gets access to sun.invoke package (e.g. via --add-exports)
-        new ProxyModuleMapping(sun.invoke.WrapperInstance.class).test();
 
         Class<?> modulePrivateIntf = Class.forName("sun.net.PlatformSocketImpl");
         new ProxyModuleMapping(modulePrivateIntf).test();
